# droplets_simulation

./: .gitignore  CMakeLists.txt  CUBE2USG  CUBE_mod.f90  DelFiles.bat  DelIniDis.bat  HowToCount.md  IniDisA-4 - コピー.txt  IniDisA-4.bat  Makefile  OfficeSize.csv  README.md  adhesion_onSTL.f90  adjacency_solver.f90  adjacent_information.mod  api-doc-ford-settings.md  api-doc-index.md  boxListDis.bat  build.bat  build.sh  cases.csv  cases_reader.f90  cases_reader.mod  condition.nml  condition.txt  condition_virus.txt  countTimeMean_operator.py  csv_operator.py  csv_reader.f90  csv_reader.mod  cube_mod.mod  drop_motion.f90  drop_motion_mod.mod  equation_mod.f90  equation_mod.mod  file_operator.py  filename_mod.f90  fld_reader.f90  flow_field.f90  flow_field.mod  (+20 more)
DataOperator_py/: countTimeMean_operator.py  file_operator.py  startSecondStudy.py
RandomMaker/: DeadlineMaker.py  RadiusDistributionMaker.py  deadlineMaker.py  radiusDistributionMaker.py  radiusDistributionMeker.py
SampleCase/: condition.nml  condition.txt  initial_position.csv
Test/: .gitignore  sample.txt  sample.vtk
data/: deadline.txt  initialRadius_conversation.txt  initialRadius_coughing.txt  initialRadius_coughing_1.txt  minimum_radius.csv  radius_conversation.csv  radius_distribution.csv  radius_distribution_backup.csv  radius_distribution_conversation.csv
docs/: index.html  search.html
docs/interface/: cross_product.html  normalize_vector.html  print_progress.html  read_csv.html
docs/lists/: files.html  modules.html  procedures.html  programs.html  types.html
docs/module/: adjacencysolver_m.html  array_m.html  boxcounter_m.html  casename_m.html  conditionvalue_m.html  dropletequation_m.html  dropletgenerator_m.html  dropletmotionsimulation.html  filename_m.html  flow_field_m.html  geometry_m.html  kdtree_m.html  path_operator_m.html  plot3d_operator.html  scf_file_reader_m.html  sct_file_reader_m.html  simplefile_reader.html  sort_m.html  terminalcontroler_m.html  timekeeper_m.html  unstructuredelement_m.html  unstructuredgrid_m.html  vector_m.html  virusdroplet_m.html  vtk_operator_m.html
docs/page/: index.html
docs/proc/: add_flag.html  append2list_int.html  basicparameter_.html  case_check.html  check_range_of_array.html  coalescence_check.html  cross_product_dble.html  cross_product_real.html  destructor.html  dropletcounter.html  dropletequationsolver_.html  dropletgenerator_.html  dropletidinbox.html  dropletidinstate.html  droplettotalvolume.html  ec_scalar_reader.html  ec_vector_reader.html  fc_scalar_reader.html  fc_vector_reader.html  fisheryates_shuffle.html  flowfield_.html  flowfieldunstructuredgrid_.html  flowfieldunstructuredgrid_withmeshfile.html  get_box_array.html  get_casename.html  get_cell2bound_face.html  get_cell2boundface.html  get_cell2faces.html  get_cell_data_from_cellvertices.html  get_cell_offsets.html  get_cellcenters.html  get_data_array_float64_.html  get_data_array_int32_.html  get_data_char_.html  get_data_float64_.html  get_data_int32_~2.html  get_dirfrompath.html  get_dropletsarea.html  get_face2cells.html  get_face2vertices.html  (+83 more)
docs/program/: boxflowfield.html  cellcentercalc_test.html  cube2usg.html  droplet2csv.html  dropletcount.html  geometry_test.html  kdtree_test.html  main.html  sort_main_vtk_ver.html  sort_test.html  translate.html
docs/sourcefile/: adjacency_solver.f90.html  array.f90.html  boxcounter.f90.html  boxflowfield.f90.html  casename.f90.html  cellcentercalc_test.f90.html  conditionvalue.f90.html  cube2usg.f90.html  droplet2csv.f90.html  dropletcount.f90.html  dropletequation.f90.html  dropletgenerator.f90.html  dropletmotionsimulation.f90.html  filename_mod.f90.html  flow_field.f90.html  geometry.f90.html  geometry_test.f90.html  initial_translate.f90.html  kdtree.f90.html  kdtree_test.f90.html  main.f90.html  path_operator.f90.html  plot3d_operator.f90.html  scffile_reader.f90.html  sctfile_reader.f90.html  simplefile_reader.f90.html  sort.f90.html  sort_main_vtk_ver.f90.html  sort_test.f90.html  terminalcontroler.f90.html  timekeeper.f90.html  unstructuredelement.f90.html  unstructuredgrid.f90.html  vector.f90.html  virusdroplet.f90.html  vtkmesh_operator.f90.html
docs/src/: MAIN.f90  SCTfile_reader.f90  adjacency_solver.f90  array.f90  boxFlowField.f90  (+14 more)
fld_flow/: condition.nml  initial_position.csv
lib/: CMakeLists.txt  SCFfile_reader.f90  SCFlow_file_reader.f90  adjacency_solver.f90  array.f90  boxCounter.f90  caseName.f90  conditionValue.f90  dropletEquation.f90  dropletGenerator.f90  dropletMotionSimulation.f90  filename_mod.f90  flow_field.f90  geometry.f90  kdTree.f90  kdTree_pointer.f90  path_operator.f90  plot3d_operator.f90  simpleFile_reader.f90  sort.f90  terminalControler.f90  timeKeeper.f90  unstructuredElement.f90  unstructuredGrid.f90  unstructured_grid.f90  vector.f90  virusDroplet.f90  vtkMesh_operator.f90
option/: basicSetting.nml  boxList.csv  boxList_x500.csv  case_list.txt  initial_translate_setting.nml  memo.txt  stl_list.txt
page/: index.md
sample_case/: condition.txt
src/: CMakeLists.txt  CUBE2USG.f90  CUBE_mod.f90  MAIN.f90  Makefile  SCTfile_reader.f90  adhesion_onSTL.f90  adjacency_solver.f90  array.f90  array2VTK.f90  array_IO.f90  boxCounter.f90  boxFlowField.f90  caseList_mod.f90  caseName.f90  caseNameList.f90  conditionValue.f90  count_aboveDesk.f90  counter.f90  csv_reader.f90  drop_motion.f90  droplet2CSV.f90  dropletCount.f90  dropletCount_timeSeries.f90  dropletEquation.f90  dropletGenerator.f90  dropletGroup.f90  dropletManager.f90  dropletMotionSimulation.f90  equation_mod.f90  filename_mod.f90  fld_reader.f90  flow_field.f90  getFinalDroplet.f90  initial_translate.f90  kdTree.f90  kdTree_IDA.f90  main.f90  path_operator.f90  plot3d_operator.f90  (+14 more)
test/: .gitignore  CMakeLists.txt  cellCenterCalc_test.f90  geometry_test.f90  kdTree_test.f90  sample.vtk  sort_main_vtk_ver.f90  sort_test.f90
test/VTK/: sax_flow.vtk
toFlowDIR/: condition_droplet.txt
tube/: Box.vtk  BoxCount.csv  ResultSummary.txt  boxList.csv  condition.nml  initial_position.csv  particle.csv
tube_fph/: tube.stl
(+231 files in other folders)
